--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
     <div class="gallery content-block">
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\Berkeley House\50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
+        <img src="\50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
         <figcaption class="cap">Private offices</figcaption>
       </figure>
 
@@ -726,3 +726,4 @@
   </script>
 </body>
 </html>
+
