--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       min-height: 520px;
       background:
         linear-gradient(rgba(0,0,0,0.80), rgba(0,0,0,0.80)),
-        url("file:///c:\Users\aebs7\OneDrive\Documents\Berkeley House\64cb5788-afad-4430-aea9-65c0e896897d.jpg") center/cover no-repeat;
+        url("64cb5788-afad-4430-aea9-65c0e896897d.jpg") center/cover no-repeat;
       color: white;
     }
     .hero-inner{
@@ -498,7 +498,7 @@
 
     <div class="gallery content-block">
       <figure class="photo reveal">
-        <img src="\50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
+        <img src="50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
         <figcaption class="cap">Private offices</figcaption>
       </figure>
 
@@ -726,4 +726,5 @@
   </script>
 </body>
 </html>
+
 
