--- a/Website.html
+++ b/Website.html
@@ -105,7 +105,7 @@
       min-height: 520px;
       background:
         linear-gradient(rgba(0,0,0,0.80), rgba(0,0,0,0.80)),
-        url('file:///c:/Users/aebs7/OneDrive/Documents/BerkeleyHouse/64cb5788-afad-4430-aea9-65c0e896897d.jpg') center/cover no-repeat;
+        url('64cb5788-afad-4430-aea9-65c0e896897d.jpg') center/cover no-repeat;
       color: white;
     }
     .hero-inner{
@@ -744,3 +744,4 @@
   </script>
 </body>
 </html>
+
