--- a/index.html
+++ b/index.html
@@ -507,32 +507,32 @@
 
     <div class="gallery content-block">
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
+        <img src="50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
         <figcaption class="cap">Private offices</figcaption>
       </figure>
 
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\293f47b6-e7cf-486f-bc0b-df39df971690.jpg" alt="Meeting room with projector" loading="lazy">
+        <img src="293f47b6-e7cf-486f-bc0b-df39df971690.jpg" alt="Meeting room with projector" loading="lazy">
         <figcaption class="cap">Meeting rooms</figcaption>
       </figure>
 
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\photo_2026-01-05_14-53-48.jpg" alt="Reception and shared area" loading="lazy">
+        <img src="photo_2026-01-05_14-53-48.jpg" alt="Reception and shared area" loading="lazy">
         <figcaption class="cap">Reception &amp; shared areas</figcaption>
       </figure>
 
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\0138b0b3-c1ab-4c39-9138-94d061449d20.jpg" alt="Coffee and breakout space" loading="lazy">
+        <img src="0138b0b3-c1ab-4c39-9138-94d061449d20.jpg" alt="Coffee and breakout space" loading="lazy">
         <figcaption class="cap">Breakout space</figcaption>
       </figure>
 
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\64cb5788-afad-4430-aea9-65c0e896897d.jpg" alt="Hallways and access" loading="lazy">
+        <img src="64cb5788-afad-4430-aea9-65c0e896897d.jpg" alt="Hallways and access" loading="lazy">
         <figcaption class="cap">Easy access</figcaption>
       </figure>
 
       <figure class="photo reveal">
-        <img src="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\Add a heading.png" alt="Berkeley House exterior" loading="lazy">
+        <img src="Add a heading.png" alt="Berkeley House exterior" loading="lazy">
         <figcaption class="cap">Historic Kenilworth location</figcaption>
       </figure>
     </div>
@@ -744,5 +744,6 @@
   </script>
 </body>
 </html>
+
 
 
