--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Berkeley House | Business Centre in Kenilworth</title>
-  <link rel="icon" href="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\Berkeley House Logo with Background.png" sizes="any">
-  <link rel="icon" href="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\Berkeley House Logo with Background.png" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="file:///c:\Users\aebs7\OneDrive\Documents\BerkeleyHouse\Berkeley House Logo with Background.png">
+  <link rel="icon" href="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/Berkeley%20House%20Logo%20with%20Background.png" sizes="any">
+  <link rel="icon" href="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/Berkeley%20House%20Logo%20with%20Background.png" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/Berkeley%20House%20Logo%20with%20Background.png">
   <meta name="description" content="Family-owned business centre in the heart of historic Kenilworth. Offices to let, meeting rooms, virtual offices, and business services." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
