--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
     <div class="gallery content-block">
       <figure class="photo reveal">
-        <img src="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
+        <img href="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/50ca3735-2e39-4b18-9abe-5270cfebcf63.jpg" alt="Private office space at Berkeley House" loading="lazy">
         <figcaption class="cap">Private offices</figcaption>
       </figure>
 
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
