--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
       </figure>
 
       <figure class="photo reveal">
-        <img src="6https://github.com/lakhvirc4ff/Berkeley-House/blob/main/64cb5788-afad-4430-aea9-65c0e896897d.jpg" alt="Hallways and access" loading="lazy">
+        <img src="https://github.com/lakhvirc4ff/Berkeley-House/blob/main/64cb5788-afad-4430-aea9-65c0e896897d.jpg" alt="Hallways and access" loading="lazy">
         <figcaption class="cap">Easy access</figcaption>
       </figure>
 
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
