--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <p>Prime location at the centre of Kenilworth. Flexible terms and dedicated on-site management.</p>
         <ul class="features">
           <li><span class="dot"></span> Move-in ready spaces</li>
-          <li><span class="dot"></span> 145–400 sq ft</li>
+          <li><span class="dot"></span> 14–74 sq m</li>
           <li><span class="dot"></span> Book a site tour</li>
         </ul>
         <div style="margin-top:auto; display:flex; gap:10px; flex-wrap:wrap;">
@@ -487,7 +487,7 @@
             <span class="pill">Available Now</span>
             <h3 style="margin-top:6px;">Hotdesk Passes</h3>
             <p>  Grab a focused desk when you need it.
-  <strong>Daily pass £25</strong> · <strong>Monthly pass £200</strong>.
+  <strong>Daily pass £25</strong> · <strong>Monthly pass £250</strong>.
   Includes tea/coffee and member discounts on meeting rooms.</p>
           </div>
           <div class="col-6" style="display:flex; align-items:center; justify-content:flex-end; gap:10px; flex-wrap:wrap;">
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
