--- a/index.html
+++ b/index.html
@@ -468,11 +468,11 @@
 
       <article class="card col-4 reveal">
         <span class="pill">Offices to Let</span>
-        <h3>Private offices from 145–400 sq ft</h3>
+        <h3>Private offices from 14–74 m<sup>2</sup></h3>
         <p>Prime location at the centre of Kenilworth. Flexible terms and dedicated on-site management.</p>
         <ul class="features">
           <li><span class="dot"></span> Move-in ready spaces</li>
-          <li><span class="dot"></span> 14–74 sq m</li>
+          <li><span class="dot"></span> 14–74 m<sup>2</sup></li>
           <li><span class="dot"></span> Book a site tour</li>
         </ul>
         <div style="margin-top:auto; display:flex; gap:10px; flex-wrap:wrap;">
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
