--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             Open for your Business
           </span>
         </h1>
-        <p class="lead">Family owned and managed, Berkeley House provides office, retail and meeting spaces — plus business services — in the heart of historic Kenilworth.</p>
+        <p class="lead">Family owned and managed, Berkeley House provides office, retail and meeting spaces plus business services in the heart of historic Kenilworth.</p>
 
         <div class="cta">
           <a class="btn btn-primary" href="#contact">Book a Tour</a>
@@ -744,6 +744,7 @@
   </script>
 </body>
 </html>
+
 
 
 
