--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <ul class="features">
           <li><span class="dot"></span> Move-in ready spaces</li>
           <li><span class="dot"></span> 14–74 m<sup>2</sup></li>
-          <li><span class="dot"></span> Book a site tour</li>
+          <li><span class="dot"></span> Kitchen Access </li>
         </ul>
         <div style="margin-top:auto; display:flex; gap:10px; flex-wrap:wrap;">
           <a class="btn btn-primary" href="#contact">Enquire Now</a>
@@ -484,11 +484,14 @@
       <article class="card col-12 reveal" aria-label="Hotdesk teaser">
         <div class="grid">
           <div class="col-6">
-            <span class="pill">Available Now</span>
+            <span class="pill">Remote Working</span>
             <h3 style="margin-top:6px;">Hotdesk Passes</h3>
-            <p>  Grab a focused desk when you need it.
-  <strong>Daily pass £25</strong> · <strong>Monthly pass £250</strong>.
-  Includes tea/coffee and member discounts on meeting rooms.</p>
+            <p>  Grab a focused desk when you need it.</p>
+        <ul class="features">
+          <li><span class="dot"></span> Kitchen Access</li>
+          <li><span class="dot"></span> Tea &amp; Coffee</li>
+          <li><span class="dot"></span> <strong>Daily pass £25</strong> · <strong>Monthly pass £250</strong></li>
+        </ul>
           </div>
           <div class="col-6" style="display:flex; align-items:center; justify-content:flex-end; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-ghost" href="#contact">Book Now</a>
@@ -744,6 +747,7 @@
   </script>
 </body>
 </html>
+
 
 
 
