--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         <div class="stars" aria-label="5 stars">★★★★★</div>
         <p>“GBS Procure has been a tenant at Berkeley House since March 2022. During that time we have expanded and taken on further office space, which has easily been accommodated by the Berkeley House team.”</p>
         <div class="who">
-          <span>Current tenant</span>
+          <span>Gary Stephens</span>
           <span class="small">Office sapce</span>
         </div>
       </article>
@@ -562,7 +562,7 @@
         <div class="stars" aria-label="5 stars">★★★★★</div>
         <p>“My business has had a virtual tenancy at Berkeley House since it started in 2020. As a 100% remote business we were looking for somewhere local as our registered address and Berkeley House was perfect!”</p>
         <div class="who">
-          <span>Current tenant</span>
+          <span>Alison Phillips</span>
           <span class="small">Virtual office</span>
         </div>
       </article>
@@ -571,7 +571,7 @@
         <div class="stars" aria-label="5 stars">★★★★★</div>
         <p>“I have been running a boutique Pilates studio at Berkeley House in Kenilworth for a few years now and I have to say my experience of being a tenant here has been nothing short of perfect!”</p>
         <div class="who">
-          <span>Current tenant</span>
+          <span>Julia Cooper</span>
           <span class="small">Office space</span>
         </div>
       </article>
@@ -747,6 +747,7 @@
   </script>
 </body>
 </html>
+
 
 
 
