--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <div class="wrap">
       <div class="row">
         <a class="brand" href="#top" aria-label="Berkeley House Home">
-          <img src="assets/logo.png" alt="Berkeley House logo" onerror="this.style.display='none'">
+          <img src="Berkeley House Logo.png" alt="Berkeley House logo" onerror="this.style.display='none'">
           <span>Berkeley House</span>
         </a>
 
@@ -747,6 +747,7 @@
   </script>
 </body>
 </html>
+
 
 
 
